...
                            <constraint firstItem="v15-CG-79d" firstAttribute="trailing" secondItem="ns6-s7-WfN" secondAttribute="trailing" id="k0i-wd-H9i"/>
                            <constraint firstItem="v15-CG-79d" firstAttribute="top" secondItem="ns6-s7-WfN" secondAttribute="bottom" id="okf-zc-fP4"/>
                            <constraint firstItem="ns6-s7-WfN" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="zdG-DY-qmN"/>
                        </constraints>
                    </view>
                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                    <navigationItem key="navigationItem" title="D2D transit" id="lwV-26-7pI">
                        <barButtonItem key="leftBarButtonItem" image="menu" id="WTx-9J-C4Z">
                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            <connections>
                                <action selector="presentLeftSideMenu:" destination="BYZ-38-t0r" id="pRR-fF-eCV"/>
                            </connections>
                        </barButtonItem>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="b1W-OE-V9p" id="mmi-Ct-bEg"/>
                            <outlet property="delegate" destination="b1W-OE-V9p" id="zRT-iK-Qp2"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Favourites" id="4OK-Zs-zeZ"/>
                    <connections>
                        <segue destination="yXN-Yt-rhm" kind="show" identifier="toDetails" id="iOu-sX-5Gm"/>
                    </connections>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="yhp-2D-uhB" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
...
                            <constraint firstAttribute="trailing" secondItem="ucv-1i-cuZ" secondAttribute="trailing" id="Nap-iS-Cd7"/>
                            <constraint firstItem="Px7-Vb-90F" firstAttribute="top" secondItem="ucv-1i-cuZ" secondAttribute="bottom" id="RsX-hd-3Dr"/>
                        </constraints>
                    </view>
                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                    <navigationItem key="navigationItem" id="h0u-G1-6sx">
                        <barButtonItem key="rightBarButtonItem" title="Favorite" id="cs5-aX-Hgg">
                            <connections>
                                <action selector="favoriteBarButtonPressed:" destination="yXN-Yt-rhm" id="Z0J-e4-Egz"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
