...
        self.routeDetailstableView.estimatedRowHeight = 90
        self.routeDetailstableView.rowHeight = UITableViewAutomaticDimension
        routeDetailArray = route.routeToArrayOfDetails()
        displayedArray = routeDetailArray
        if DataManager.sharedInstance.favouritesContainRouteWhereRoute(route: route)
        {
            favoriteBarButton.title = "Unfavorite"
        }
        else
        {
            favoriteBarButton.title = "Favorite"
        }
        createMapView()
...
